# 3dcpp

./: .gitignore  CMakeLists.txt  README.md  engine.cfg  imgui.ini
assets/worlds/world01/: level.scene
shaders/: compute.hlsl  traditional_frag.hlsl  traditional_vert.hlsl
src/: main.cpp
src/core/: Config.cpp  Config.hpp  Window.cpp  Window.hpp
src/game/: Camera.cpp  Camera.hpp  GameManager.cpp  GameManager.hpp  SceneLoader.cpp  SceneLoader.hpp
src/graphics/: GraphicsPipeline.cpp  GraphicsPipeline.hpp  Mesh.hpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  VmaUsage.cpp  VulkanBufferManager.cpp  VulkanBufferManager.hpp  VulkanContext.cpp  VulkanContext.hpp  stb_image_impl.cpp
src/input/: InputManager.cpp  InputManager.hpp
src/scene/: SceneLoader.cpp  SceneLoader.hpp
src/ui/: GuiManager.cpp  GuiManager.hpp
